--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
@@ -29,7 +30,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
-    "mocks": "json-server-auth src/mocks/users.json --port 3001"
+    "mocks": "json-server-auth src/mocks/mock.json --port 3001 -r src/mocks/auth.json"
   },
   "eslintConfig": {
     "extends": [
